--- a/soundsofnature/src/main/res/values/strings.xml
+++ b/soundsofnature/src/main/res/values/strings.xml
@@ -2,9 +2,8 @@
 <resources>
 
     <string name="app_name">Sounds of Nature</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_section_songlist">Section 1</string>
+    <string name="title_section_downloaded">Section 2</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_player">PlayerActivity</string>
     <string name="hello_world">Hello world!</string>
