--- a/soundsofnature/src/main/res/values/strings.xml
+++ b/soundsofnature/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_player">PlayerActivity</string>
     <string name="hello_world">Hello world!</string>
+    <string name="action_reload">Reload</string>
 
 </resources>
